@@ -3,11 +3,13 @@ package in.clouthink.daas.fss.mysql.impl;
 import in.clouthink.daas.fss.core.StoreFileRequest;
 import in.clouthink.daas.fss.domain.model.FileObject;
 import in.clouthink.daas.fss.domain.model.FileObjectHistory;
+import in.clouthink.daas.fss.domain.request.FileObjectSaveRequest;
 import in.clouthink.daas.fss.domain.request.FileObjectSearchRequest;
 import in.clouthink.daas.fss.domain.service.FileObjectService;
 import in.clouthink.daas.fss.mysql.repository.FileObjectAttributeRepository;
 import in.clouthink.daas.fss.mysql.repository.FileObjectHistoryRepository;
 import in.clouthink.daas.fss.mysql.repository.FileObjectRepository;
+import org.springframework.beans.BeanUtils;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.data.domain.Page;
 import org.springframework.stereotype.Service;
@@ -44,30 +46,22 @@ public class FileObjectServiceImpl implements FileObjectService {
         return fileObjectHistoryRepository.findByFileObjectId(id)
                                           .stream()
                                           .map(item -> (FileObjectHistory) item)
-                                          .collect(Collectors
-                                                           .toList());
+                                          .collect(Collectors.toList());
     }
 
     @Override
-    public FileObject save(StoreFileRequest storeFileRequest) {
-        in.clouthink.daas.fss.mysql.model.FileObject fileObject =
-                in.clouthink.daas.fss.mysql.model.FileObject.from(storeFileRequest);
-
+    public FileObject save(FileObjectSaveRequest storeFileRequest) {
+        in.clouthink.daas.fss.mysql.model.FileObject fileObject = new in.clouthink.daas.fss.mysql.model.FileObject();
+        BeanUtils.copyProperties(storeFileRequest, fileObject, "id");
         return fileObjectRepository.save(fileObject);
     }
 
     @Override
-    public FileObject merge(StoreFileRequest request, FileObject fileObject) {
-        return null;
-    }
-
-    @Override
     public FileObjectHistory saveAsHistory(FileObject fileObject) {
-        in.clouthink.daas.fss.mysql.model.FileObject mysqlFileObject =
-                (in.clouthink.daas.fss.mysql.model.FileObject) fileObject;
+        in.clouthink.daas.fss.mysql.model.FileObject mysqlFileObject = (in.clouthink.daas.fss.mysql.model.FileObject) fileObject;
 
-        in.clouthink.daas.fss.mysql.model.FileObjectHistory result =
-                in.clouthink.daas.fss.mysql.model.FileObjectHistory.from(mysqlFileObject);
+        in.clouthink.daas.fss.mysql.model.FileObjectHistory result = in.clouthink.daas.fss.mysql.model.FileObjectHistory
+                .from(mysqlFileObject);
 
         return fileObjectHistoryRepository.save(result);
     }
@@ -103,7 +97,7 @@ public class FileObjectServiceImpl implements FileObjectService {
     @Override
     public Page<FileObject> search(FileObjectSearchRequest searchRequest) {
         return fileObjectRepository.findPage((in.clouthink.daas.fss.mysql.model.FileObjectSearchRequest) searchRequest)
-                                   .map(item -> (FileObject) item);
+                                   .map(item -> item);
     }
 
 }
